# hermes-orchestrator

./: PROGRESS.md  README.md  pyproject.toml
config/: config.yaml
src/: main.py
src/agents/: __init__.py  base.py  codex_adapter.py  error_handler.py  opencode_adapter.py  progress_tracker.py
src/core/: config.py  logging.py  models.py
src/github/: __init__.py  client.py  confirmation.py  git_ops.py  pr_manager.py  workflow.py
src/interfaces/: telegram.py
src/interfaces/web/: __init__.py  app.py  ui.py
src/notifications/: __init__.py  channels.py  notifier.py
src/orchestrator/: router.py  state_machine.py  task_manager.py
tests/: test_core_orchestrator.py  test_router.py
tests/test_agents/: test_agent_base.py  test_agents_cli.py
tests/test_core/: test_config.py  test_logging.py
tests/test_github/: test_github_modules.py
tests/test_integration/: test_e2e.py  test_github_workflow.py
tests/test_interfaces/: test_telegram.py  test_web_app.py
tests/test_notifications/: test_notifications.py
