[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-orchestrator"
version = "0.1.0"
description = "Hermes as an AI Agent Orchestrator for local CLI tools"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings",
    "pyyaml",
    "python-dotenv",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-mock", "structlog"]
telegram = ["python-telegram-bot"]
github = ["PyGithub", "GitPython"]
web = ["fastapi", "uvicorn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
